// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SliderSkeleton Snapshots SliderSkeleton animate snapshot 1`] = `
<DocumentFragment>
  .c1 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c1.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c1.variant--circle {
  width: 1rem;
  height: 1.5rem;
  border-radius: var(--bds-border-radius-circle);
}

.c1.variant--rect {
  width: 1rem;
  height: 1.5rem;
}

.c1.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.variant--rect.shape--squared {
  border-radius: 0;
}

.c1.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c1.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.variant--text.shape--squared {
  border-radius: 0;
}

.c2 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c2.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c2.variant--circle {
  width: 12.5rem;
  height: 1.25rem;
  border-radius: var(--bds-border-radius-circle);
}

.c2.variant--rect {
  width: 12.5rem;
  height: 1.25rem;
}

.c2.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c2.variant--rect.shape--squared {
  border-radius: 0;
}

.c2.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c2.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c2.variant--text.shape--squared {
  border-radius: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .skeleton--slider-bar {
  margin-left: 1rem;
  margin-right: 1rem;
}

.c0 .skeleton--slider-input {
  margin-left: 1rem;
}

<div
    class="c0 slider--skeleton orientation--horizontal"
  >
    <div
      class="c1 variant--rect shape--rounded skeleton--slider-value style--animated"
      height="size_24"
      width="size_16"
    />
    <div
      class="c2 variant--rect shape--rounded skeleton--slider-bar style--animated"
      height="size_20"
      width="12.5rem"
    />
    <div
      class="c1 variant--rect shape--rounded skeleton--slider-value style--animated"
      height="size_24"
      width="size_16"
    />
  </div>
</DocumentFragment>
`;

exports[`SliderSkeleton Snapshots SliderSkeleton default snapshot 1`] = `
<DocumentFragment>
  .c1 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c1.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c1.variant--circle {
  width: 1rem;
  height: 1.5rem;
  border-radius: var(--bds-border-radius-circle);
}

.c1.variant--rect {
  width: 1rem;
  height: 1.5rem;
}

.c1.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.variant--rect.shape--squared {
  border-radius: 0;
}

.c1.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c1.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.variant--text.shape--squared {
  border-radius: 0;
}

.c2 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c2.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c2.variant--circle {
  width: 12.5rem;
  height: 1.25rem;
  border-radius: var(--bds-border-radius-circle);
}

.c2.variant--rect {
  width: 12.5rem;
  height: 1.25rem;
}

.c2.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c2.variant--rect.shape--squared {
  border-radius: 0;
}

.c2.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c2.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c2.variant--text.shape--squared {
  border-radius: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .skeleton--slider-bar {
  margin-left: 1rem;
  margin-right: 1rem;
}

.c0 .skeleton--slider-input {
  margin-left: 1rem;
}

<div
    class="c0 slider--skeleton orientation--horizontal"
  >
    <div
      class="c1 variant--rect shape--rounded skeleton--slider-value style--default"
      height="size_24"
      width="size_16"
    />
    <div
      class="c2 variant--rect shape--rounded skeleton--slider-bar style--default"
      height="size_20"
      width="12.5rem"
    />
    <div
      class="c1 variant--rect shape--rounded skeleton--slider-value style--default"
      height="size_24"
      width="size_16"
    />
  </div>
</DocumentFragment>
`;

exports[`SliderSkeleton Snapshots SliderSkeleton vertical orientation 1`] = `
<DocumentFragment>
  .c1 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c1.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c1.variant--circle {
  width: 1.25rem;
  height: 12.5rem;
  border-radius: var(--bds-border-radius-circle);
}

.c1.variant--rect {
  width: 1.25rem;
  height: 12.5rem;
}

.c1.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.variant--rect.shape--squared {
  border-radius: 0;
}

.c1.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c1.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.variant--text.shape--squared {
  border-radius: 0;
}

.c2 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c2.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c2.variant--circle {
  width: 1rem;
  height: 1.5rem;
  border-radius: var(--bds-border-radius-circle);
}

.c2.variant--rect {
  width: 1rem;
  height: 1.5rem;
}

.c2.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c2.variant--rect.shape--squared {
  border-radius: 0;
}

.c2.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c2.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c2.variant--text.shape--squared {
  border-radius: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 .skeleton--slider-values {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-left: 0.75rem;
}

<div
    class="c0 slider--skeleton orientation--vertical"
  >
    <div
      class="c1 variant--rect shape--rounded skeleton--slider-bar style--default"
      height="12.5rem"
      width="size_20"
    />
    <div
      class="skeleton--slider-values"
    >
      <div
        class="c2 variant--rect shape--rounded skeleton--slider-value style--default"
        height="size_24"
        width="size_16"
      />
      <div
        class="c2 variant--rect shape--rounded skeleton--slider-value style--default"
        height="size_24"
        width="size_16"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`SliderSkeleton Snapshots SliderSkeleton with input option 1`] = `
<DocumentFragment>
  .c1 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c1.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c1.variant--circle {
  width: 1rem;
  height: 1.5rem;
  border-radius: var(--bds-border-radius-circle);
}

.c1.variant--rect {
  width: 1rem;
  height: 1.5rem;
}

.c1.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.variant--rect.shape--squared {
  border-radius: 0;
}

.c1.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c1.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.variant--text.shape--squared {
  border-radius: 0;
}

.c2 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c2.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c2.variant--circle {
  width: 12.5rem;
  height: 1.25rem;
  border-radius: var(--bds-border-radius-circle);
}

.c2.variant--rect {
  width: 12.5rem;
  height: 1.25rem;
}

.c2.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c2.variant--rect.shape--squared {
  border-radius: 0;
}

.c2.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c2.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c2.variant--text.shape--squared {
  border-radius: 0;
}

.c3 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c3.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c3.variant--circle {
  width: 3.375rem;
  height: 3.375rem;
  border-radius: var(--bds-border-radius-circle);
}

.c3.variant--rect {
  width: 3.375rem;
  height: 3.375rem;
}

.c3.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c3.variant--rect.shape--squared {
  border-radius: 0;
}

.c3.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c3.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c3.variant--text.shape--squared {
  border-radius: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .skeleton--slider-bar {
  margin-left: 1rem;
  margin-right: 1rem;
}

.c0 .skeleton--slider-input {
  margin-left: 1rem;
}

<div
    class="c0 slider--skeleton orientation--horizontal"
  >
    <div
      class="c1 variant--rect shape--rounded skeleton--slider-value style--default"
      height="size_24"
      width="size_16"
    />
    <div
      class="c2 variant--rect shape--rounded skeleton--slider-bar style--default"
      height="size_20"
      width="12.5rem"
    />
    <div
      class="c1 variant--rect shape--rounded skeleton--slider-value style--default"
      height="size_24"
      width="size_16"
    />
    <div
      class="c3 variant--rect shape--rounded skeleton--slider-input style--default"
      height="3.375rem"
      width="3.375rem"
    />
  </div>
</DocumentFragment>
`;
